dynamic modules test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <span>
-  <a routerLink="./dynamic-test">dynamic-test</a><a routerLink="./outlet-test"> outlet-test</a>
+  <a routerLink="./dynamic-test">dynamic-test</a>&nbsp;
+  <a routerLink="./outlet-test">outlet-test</a>&nbsp;
+  <a routerLink="./lazy-load-test">lazy-load-test</a>&nbsp;
 </span>
 
 <router-outlet></router-outlet>
