--- a/src/app/dynamic/outlet-test/outlet-test.component.html
+++ b/src/app/dynamic/outlet-test/outlet-test.component.html
@@ -1,3 +1,5 @@
 <h1>outlet-test</h1>
 
-<app-dynamic [configs]="sectionConfig"></app-dynamic>
+<button (click)="toggle()">toggle</button>
+
+<dynamic [configs]="sectionConfig"></dynamic>
