--- a/src/app/dynamic/lazy-load-test/lazy-load-test.component.html
+++ b/src/app/dynamic/lazy-load-test/lazy-load-test.component.html
@@ -1,1 +1,11 @@
+<span>
+  <a routerLink="./route-1">route 1</a>&nbsp;
+  <a routerLink="./route-2">route 2</a>&nbsp;
+</span>
+
 <button (click)="load()">load</button>
+<button (click)="close()">close</button>
+
+<app-test-2></app-test-2>
+
+<router-outlet></router-outlet>
