--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <span>
-  <a routerLink="./dynamic-test">dynamic-test</a>&nbsp;
-  <a routerLink="./outlet-test">outlet-test</a>&nbsp;
-  <a routerLink="./lazy-load-test">lazy-load-test</a>&nbsp;
+  <a routerLink="./dynamic/dynamic-test">dynamic-test</a>&nbsp;
+  <a routerLink="./dynamic/outlet-test">outlet-test</a>&nbsp;
+  <a routerLink="./dynamic/lazy-load-test">lazy-load-test</a>&nbsp;
+  <a routerLink="./ecs/ecs-canvas">ecs-canvas</a>&nbsp;
 </span>
 
 <router-outlet></router-outlet>
