--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <a routerLink="./dynamic/dynamic-test">dynamic-test</a>&nbsp;
   <a routerLink="./dynamic/outlet-test">outlet-test</a>&nbsp;
   <a routerLink="./dynamic/lazy-load-test">lazy-load-test</a>&nbsp;
-  <a routerLink="./ecs/ecs-canvas">ecs-canvas</a>&nbsp;
+  <br>
+  <a routerLink="./dynamic-2/view">view</a>&nbsp;
 </span>
 
 <router-outlet></router-outlet>
