--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <span>
   <a routerLink="./dynamic/dynamic-test">dynamic-test</a>&nbsp;
   <a routerLink="./dynamic/outlet-test">outlet-test</a>&nbsp;
+  <a routerLink="./dynamic/ngxd-outlet-test">ngxd-outlet-test</a>&nbsp;
   <a routerLink="./dynamic/lazy-load-test">lazy-load-test</a>&nbsp;
   <br>
   <a routerLink="./dynamic-2/view">view</a>&nbsp;
