--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
   <a routerLink="./dynamic/lazy-load-test">lazy-load-test</a>&nbsp;
   <br>
   <a routerLink="./dynamic-2/view">view</a>&nbsp;
+  <br>
+  <a routerLink="./store/store-test">store test</a>&nbsp;
 </span>
 
 <router-outlet></router-outlet>
