--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
   <br>
   <a routerLink="./dynamic-2/view">view</a>&nbsp;
   <br>
+  <a routerLink="./dynamic-3/dynamic-test">dynamic-test</a>&nbsp;
+  <br>
   <a routerLink="./store/store-test">store test</a>&nbsp;
+  <a routerLink="./store/store-test-2">store test 2</a>&nbsp;
 </span>
 
 <router-outlet></router-outlet>
