--- a/src/app/dynamic-3/dynamic-test/dynamic-test.component.html
+++ b/src/app/dynamic-3/dynamic-test/dynamic-test.component.html
@@ -8,46 +8,27 @@
   <hr>
 </ng-container>
 
-
-
 <ng-container *getData="let $implicit from 'test-data'
+                        let allData = allData;
                         let data1 = data1;
                         let data2 = data2;
                         let data3 = data3;
-                        let allData = allData;
                         let onAction = onAction;">
+
+  <ng-container *getData="let componentName from 'test-components'">
+    <pre>{{ componentName }}</pre>
+
+    <pre>*dynamic</pre>
+
+    <ng-container *dynamic="componentName; context: allData;"></ng-container>
+
+    <hr>
+  </ng-container>
 
   <pre>test-data</pre>
   <p>{{ $implicit }}</p>
   <pre>{{ allData | json }}</pre>
   <hr>
-
-  <ng-container *ngIf="true">
-
-    <ng-container *getData="let componentName from 'test-components'">
-      <pre>{{ componentName }}</pre>
-
-
-      <pre>*dynamic</pre>
-
-      <ng-container *dynamic="componentName; 
-                              context: allData;"></ng-container>
-
-    </ng-container>
-    <hr>
-  </ng-container>
-
-  <!-- <ng-container *ngIf="false">
-    <pre>*ngxComponentOutlet</pre>
-
-    <ng-container *ngxComponentOutlet="component;
-                                     context: {
-                                       test: data1,
-                                       testChanges: onAction
-                                     };"></ng-container>
-
-    <hr>
-  </ng-container> -->
 
   <ng-container *ngIf="false">
 
