add doc-viewer lib

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
   <a routerLink="./dynamic/ngxd-outlet-test">ngxd-outlet-test</a>&nbsp;
   <a routerLink="./dynamic/lazy-load-test">lazy-load-test</a>&nbsp;
   <br>
-  <a routerLink="./dynamic-2/view">view</a>&nbsp;
+  <a routerLink="./dynamic-2/view">view-1</a>&nbsp;
+  <a routerLink="./dynamic-2/view-2">view-2</a>&nbsp;
   <br>
   <a routerLink="./dynamic-3/dynamic-test">dynamic-test</a>&nbsp;
   <br>
