--- a/src/app/dynamic-2/view/view.component.html
+++ b/src/app/dynamic-2/view/view.component.html
@@ -1,1 +1,9 @@
-<app-doc-viewer [doc]="currentDocument"></app-doc-viewer>
+<button (click)="previous()">previous</button>
+<button (click)="next()">next</button>
+
+<instruction-style>
+  <div>
+    <ng-container docViewer [doc]="currentDocument"></ng-container>
+  </div>
+
+</instruction-style>
