add custom-element lib and ssr support

--- a/src/app/dynamic-2/view/instruction.html
+++ b/src/app/dynamic-2/view/instruction.html
@@ -1,5 +1,7 @@
 <h1 id="how-to-place-your-goods">Как разместить свои объявления на Biztogo с помощью массовой загрузки</h1>
 
+<!-- <aio-toc class="embedded"></aio-toc> -->
+
 <h2 id="create-a-price-list">Создание прайс-листа</h2>
 
 <p>
