--- a/src/app/dynamic-2/view/view.component.html
+++ b/src/app/dynamic-2/view/view.component.html
@@ -1,9 +1,7 @@
 <button (click)="previous()">previous</button>
 <button (click)="next()">next</button>
 
-<instruction-style>
+<!-- <instruction-style></instruction-style> -->
   <div>
     <ng-container docViewer [doc]="currentDocument"></ng-container>
   </div>
-
-</instruction-style>
