--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,13 @@
   <br>
   <a routerLink="./dynamic-3/dynamic-test">dynamic-test</a>&nbsp;
   <br>
+  <a routerLink="./dynamic-4/view">more dynamic test</a>&nbsp;
+  <br>
   <a routerLink="./store/store-test">store test</a>&nbsp;
   <a routerLink="./store/store-test-2">store test 2</a>&nbsp;
+  <a routerLink="./store/store-research">store research</a>&nbsp;
 </span>
+<br>
+<insert-video></insert-video>
 
 <router-outlet></router-outlet>
