--- a/src/app/dynamic-3/dynamic-test/dynamic-test.component.html
+++ b/src/app/dynamic-3/dynamic-test/dynamic-test.component.html
@@ -8,6 +8,8 @@
   <hr>
 </ng-container>
 
+<insert-video></insert-video>
+
 <ng-container *getData="let $implicit from 'test-data'
                         let allData = allData;
                         let data1 = data1;
