--- a/src/app/dynamic-template/test-2/test-4.component.html
+++ b/src/app/dynamic-template/test-2/test-4.component.html
@@ -1,10 +1,10 @@
 <pre>catalog test 2</pre>
 
-<p *portalContent class="test">
+<p *dynamicContent class="test">
   <b>The price list</b> is a list of all the positions that you plan to place on the Cargotogo portal, with additional information about them. Such a list must be made out according to Cargotogo rules.
 </p>
 
-<ng-template portalContent>
+<ng-template dynamicContent>
   <b>The price list</b> is a list of all the positions that you plan to place on the Biztogo portal, with additional information about them. Such a list must be made out according to Biztogo rules.
 </ng-template>
 
