migrate to jest

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,16 @@
     <hr>
     <a routerLink="./dynamic-template">dynamic-template</a>
     <hr>
+    <span>:: *getData store</span>
     <a routerLink="./store-test">store test</a>
     <a routerLink="./empty-route">empty route</a>
     <a routerLink="./dynamic-counter">dynamic-counter</a>
     <a routerLink="./store-paginator">store-paginator</a>
     <hr>
     <a routerLink="./dynamic-test-3">dynamic-test-3</a>
+    <hr>
+    <span>:: Angular ECS test</span>
+    <a routerLink="./ecs-test">ecs-test</a>
   </ng-template>
 </button>
 
