--- a/src/app/store-test/store-test.component.html
+++ b/src/app/store-test/store-test.component.html
@@ -3,6 +3,11 @@
 
 <ng-container dataRoot="user-admin">
 
+  <p>
+    В этом примере показана работа Data Store Context через DI с использованием
+    директивы *getData и пайпы getData
+  </p>
+
   <ng-container *test></ng-container>
 
   <user-1></user-1>
